# juli_particles

./: CMakeLists.txt  README.md  c_cpp_properties.json
src/: Atom.cpp  Atom.h  Renderer.cpp  Renderer.h  Simulation.cpp  Simulation.h  main.cpp
